--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     --primario: #83f0cc;
     /*FF1107*/
     --secundario: #1aaacc;
+    --formcolor: #a8a5a5d7;
     --anchoPantalla: 1200px;
 }
 
@@ -171,16 +172,21 @@ body {
     font-weight: 550;
     font-size: 2rem;
     border-radius: 0.7rem;
+    border: none;
     transition: background-color .2s ease-in-out;
 }
 
 .boton:hover {
     background-color: #0099cc;
+    cursor: pointer;
 }
+
+
+/*-------SERVICIOS Y FORMULARIO------*/
 
 .contenedor {
     max-width: var(--anchoPantalla);
-    margin: 0 auto;
+    margin: 3rem auto;
     /*margin para centrar contenido*/
     background-color: gainsboro;
     padding: 3rem;
@@ -189,10 +195,6 @@ body {
     -webkit-box-shadow: 10px 10px 13px -8px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 10px 10px 13px -8px rgba(0, 0, 0, 0.75);
     box-shadow: 10px 10px 13px -8px rgba(0, 0, 0, 0.75);
-}
-
-.servicios {
-    margin: 3rem auto;
 }
 
 
@@ -234,4 +236,71 @@ body {
     /*Se podria usar esto para centrar circulo en el medio 
     margin: 0 auto; */
     font-size: 3rem;
+}
+
+
+/*FORMULARIO*/
+
+form {
+    background-color: var(--formcolor);
+    padding: 2rem;
+    border-radius: 1rem;
+    margin: 3rem;
+}
+
+form legend {
+    color: var(--primario);
+    font-size: 2.5rem;
+    margin: 3rem 0;
+    display: block;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    form {
+        max-width: 800px;
+        margin: 3rem auto;
+    }
+    .contenedor-campos {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        /*wrap se usa cuando sobrepasan el tamaño del contenedor
+        con esto "chocan" con el limite y pasan a estar por debajo*/
+    }
+    .campo {
+        flex: 0 0 calc(50% - 1rem);
+    }
+}
+
+.campo {
+    display: flex;
+    margin-bottom: 2rem;
+    align-items: center;
+}
+
+.campo label {
+    flex: 0 0 90px;
+    padding: 0.5rem;
+}
+
+.campo input {
+    flex: 1;
+    /*Se pone 1 para que ocupe todo el espacio de su contenedor, 
+    en este caso el que reste luego de consumir 90px*/
+    height: 4rem;
+}
+
+.campo textarea {
+    flex: 1;
+    height: 6rem;
+}
+
+.w-100 {
+    flex: 0 0 100%;
+}
+
+.enviar {
+    display: flex;
+    justify-content: flex-end;
 }
